--- a/SendIT/src/app/users/parcels/parcels.component.css
+++ b/SendIT/src/app/users/parcels/parcels.component.css
@@ -14,7 +14,7 @@
 
     height: 100vh;
 
-    background-color: #F9E57C;
+    background-color: #fff;
 
 
 }
@@ -57,7 +57,7 @@
 
     margin: 20px;
 
-    border: none;
+    
 }
 
 .btn-convert{
@@ -161,7 +161,7 @@ color: #6F6767;
 
     height: 10vh;
 
-    background-color: #82D78A;
+    background-color: #D78287;
 
     margin: 10px;
 
