--- a/Backend/templates/deliveredparcel.ejs
+++ b/Backend/templates/deliveredparcel.ejs
@@ -61,7 +61,7 @@
                   width="600px"
                 />
                 <h2 style="font-size: 35px">
-                  Hello <%=name%>, Your parcel <%=trackId%> has been delivered.
+                  Hello, Your parcel <%=trackId%> has been delivered.
                 </h2>
 
                 <p
