added Background service

--- a/Backgroundservices/templates/welcomeuser.ejs
+++ b/Backgroundservices/templates/welcomeuser.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Welcome</title>
   </head>
   <style>
     * {
@@ -40,9 +40,9 @@
           <table width="600" style="margin: auto">
             <tr>
               <td style="background-color: white; align: center">
-                <h3 style="color: #82d78a; font-size: 45px; font-weight: bold">
-                  SendIt
-                </h3>
+                <p style="color: #82d78a; font-size: 45px; font-weight: bold">
+                  SENDIT
+                </p>
               </td>
             </tr>
           </table>
@@ -54,15 +54,14 @@
             <tr>
               <td>
                 <img
-                  src="https://www.nutraingredients-usa.com/var/wrbm_gb_food_pharma/storage/images/publications/food-beverage-nutrition/nutraingredients-usa.com/article/2020/04/15/new-delivery-services-pop-up-amid-social-distancing-era/10914556-1-eng-GB/New-delivery-services-pop-up-amid-social-distancing-era.jpg"
-                  alt="image",
-                  height="600px"
 
-                  width="600px"
+                
+                  src="https://img.freepik.com/free-vector/delivery-staff-ride-motorcycles-shopping-concept_1150-34879.jpg?w=2000"
+                  alt="image"
+                  height="500px"
+                  width="500px"
                 />
-                <h2 style="font-size: 35px">
-                  Hello, Your parcel <%=trackId%> has been delivered.
-                </h2>
+                <h2 style="font-size: 35px">Welcome <%=name%> to SendIT</h2>
 
                 <p
                   style="
@@ -73,9 +72,7 @@
                     max-width: 500px;
                   "
                 >
-                  You parcel has been delived. The Parcel is <%=trackId%>.Please
-                  login for more information
-                  <a href="https://localhost:4200/">website</a>
+                  <a href="https://localhost:4200/">Visit our website</a>
                 </p>
               </td>
             </tr>
