--- a/SendIT/src/app/admin/admin.component.html
+++ b/SendIT/src/app/admin/admin.component.html
@@ -2,9 +2,7 @@
   <div class="menubar">
     <div class="notifications">
       <div class="notify">
-        <fa-icon [icon]="faBell" class="notify-icon"></fa-icon>
-
-        <span>Notifications</span>
+        
       </div>
 
       <fa-icon [icon]="faUser" class="user"></fa-icon>
@@ -18,9 +16,7 @@
         <fa-icon [icon]="faArrowRight" class="notify-icon"></fa-icon>
       </button>
 
-      <button class="notify-btn">
-        <fa-icon [icon]="faBell" class="notify-icon"></fa-icon>
-      </button>
+    
 
       <button class="orders">Orders</button>
 
@@ -39,6 +35,10 @@
           <span>DELIVERED PARCELS</span>
 
           <span>205</span>
+
+          
+          <fa-icon [icon]="faArchive"></fa-icon>
+
         </div>
       </div>
 
@@ -47,6 +47,11 @@
           <span>PENDING PARCELS</span>
 
           <span>100</span>
+
+
+
+
+          <fa-icon [icon]="faInbox"></fa-icon>
         </div>
       </div>
 
@@ -57,6 +62,8 @@
           <span>USERS</span>
 
           <span>1500</span>
+
+          <fa-icon [icon]="faUsers"></fa-icon>
         </div>
       </div>
     </div>
