--- a/SendIT/src/app/components/notfound/notfound.component.html
+++ b/SendIT/src/app/components/notfound/notfound.component.html
@@ -1,1 +1,9 @@
-<span>The route doesn't exist</span>
+
+<div class="notfound">
+
+    <img src="https://drudesk.com/sites/default/files/2018-02/404-error-page-not-found.jpg" alt="">
+
+    <span><a routerLink="/">Back Home</a></span>
+
+</div>
+
