--- a/SendIT/src/app/shared/error/error.component.html
+++ b/SendIT/src/app/shared/error/error.component.html
@@ -8,6 +8,6 @@
             <fa-icon [icon] ="faCancel" class="notify-icon"></fa-icon>
         </div>
 
-        <span class="message-item">error</span>
+        <span class="message-item">error occurred</span>
     </div>
 </div>
