--- a/SendIT/src/app/users/parcels/parcels.component.css
+++ b/SendIT/src/app/users/parcels/parcels.component.css
@@ -40,6 +40,20 @@
     
 }
 
+.none{
+
+
+    display: flex;
+
+    align-items: center;
+
+    justify-content: center;
+
+    font-size: 25px;
+
+    font-weight: bold;
+}
+
 .convert-head{
 
     display: flex;
@@ -180,6 +194,16 @@ color: #6F6767;
     margin-left: 20px;
 
     position: relative;
+}
+
+.delivered{
+
+
+padding: 10px;
+
+border: none;
+
+color: #82D78A;
 }
 
 .notify-number{
