--- a/SendIT/src/app/admin/admin.component.css
+++ b/SendIT/src/app/admin/admin.component.css
@@ -100,7 +100,19 @@ justify-content: center;
   justify-content: space-between;
 }
 
+.none{
 
+
+  display: flex;
+
+  align-items: center;
+
+  justify-content: center;
+
+  font-size: 25px;
+
+  font-weight: bold;
+}
 
 .main-body {
   flex: 4;
