working on notifications

--- a/SendIT/src/app/admin/admin.component.css
+++ b/SendIT/src/app/admin/admin.component.css
@@ -81,7 +81,7 @@ justify-content: center;
 .menubar-btn button {
   margin: 9%;
 
-  background-color: #f9e57c;
+  background-color: #f0d341;
 
   padding: 10px;
 
