--- a/SendIT/src/app/shared/error/error.component.css
+++ b/SendIT/src/app/shared/error/error.component.css
@@ -1,54 +1,21 @@
 .error{
 
-    width: 100vw;
+    height: 30px;
 
-    height: 100vh;
+    width: 80%;
 
-   background-color: rgba(0, 0, 0, 0.4);
+    margin: 20px;
 
+    background-color: #FA8072;
 
-   position: absolute;
-
-   top: 0;
-
-   left: 0;
-}
-
-.message{
-
-  
-    margin: 20% auto;
-
-    height: 200px;
-
-    width: 400px;
-
-    font-size: 15px;
-
-    background-color: #fff;
-
-    color: red;
+    
 }
 
 .message-item{
 
-  height: 100%;
-
-  width: 100%;
-
-  display: flex;
-
-  align-items: center;
-
-  justify-content: center;
-}
-
-.cancel{
-
     display: flex;
-    justify-content: flex-end;
 
-    font-size: 25px;
-    margin-top: 1px;
+    align-items: center;
+
+    justify-content: center;
 }
-
