--- a/SendIT/src/app/shared/error/error.component.html
+++ b/SendIT/src/app/shared/error/error.component.html
@@ -2,12 +2,6 @@
 
 
     <div class="message">
-
-        <div class="cancel">
-
-            <fa-icon [icon] ="faCancel" class="notify-icon"></fa-icon>
-        </div>
-
-        <span class="message-item">error occurred</span>
+        <span class="message-item">{{message}}</span>
     </div>
 </div>
