--- a/SendIT/src/app/users/parcels/parcels.component.css
+++ b/SendIT/src/app/users/parcels/parcels.component.css
@@ -256,6 +256,8 @@ color: #82D78A;
     margin: 10px;
 
     overflow-y: scroll;
+
+    position: relative;
     
 
     
@@ -643,6 +645,35 @@ fa-icon{
 
         margin: 20px;
     }
+  }
+
+  .mark-as-read-btn{
+
+
+    border: none;
+
+    padding: 5px;
+
+    position: absolute;
+
+    top: 0;
+
+    right: 0;
+
+    cursor: pointer;
+  }
+
+  .read{
+
+    height: 10px;
+
+    width: 10px;
+
+    border-radius: 50%;
+
+    margin: 5px;
+
+    background-color: #82D78A;
   }
 
 
